--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-html {
+/* html {
     scroll-behavior: smooth;
-}
+} */
 body {
     font-family: "Open Sans", sans-serif;
     font-weight: 300;
@@ -39,6 +39,13 @@ body.no-scroll {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+}
+.header__top {
+    position: fixed;
+    left: 0;
+    right: 0;
+    z-index: 20;
+    background-color: #fff;
 }
 .nav {
     display: flex;
@@ -121,7 +128,7 @@ body.no-scroll {
     position: absolute;
     bottom: 62px;
     left: 50%;
-    transform: rotateX(-50%);
+    transform: translateX(-50%);
     cursor: pointer;
 }
 .dot-animate {
